--- a/style.css
+++ b/style.css
@@ -1,1 +1,37 @@
 
+body
+
+
+{
+   background: url(3CB50136-1818-47B8-BAB4-F2391F20D9A1.jpeg);
+   color: #CCEEFF;
+   font-family: sans-serif;
+}
+
+.aa
+{
+   whidth: 120px;
+   border-radius: 10px;
+
+}
+
+
+
+.ee
+{
+   color: #FFFF00;
+   width: 90%;
+   size: 7px;
+   margin-top: 15px;
+}
+
+.bb
+{
+   color: #FFFF00;
+   text-decoration: none;
+   border: #ccc 2px solid;
+   padding: 10px 20px;
+   border-radius: 10px;
+
+
+}
